# PDF-RAG-Chatbot

./: backend.py  frontend.py  main.py  pyproject.toml  requirements.txt
faiss_index/: index.faiss  index.pkl
