[project]
name = "ragchatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "faiss-cpu>=1.14.3",
    "langchain==0.3.27",
    "langchain-community==0.3.27",
    "langchain-openai==0.2.14",
    "langchain-text-splitters==0.3.11",
    "openai==1.109.1",
    "pypdf==5.9.0",
    "python-dotenv==1.1.1",
    "streamlit==1.49.0",
    "tiktoken==0.11.0",
]
